# cnat

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: Test.yml
fixtures/: package.json  pnpm-lock.yaml  sample.css  sample.tsx  sample2.tsx  sample_comments.jsx  unstyled.tsx
fixtures/nested/: sample.tsx  sample2.tsx
src/: collect.rs  lib.rs  main.rs  scope.rs  transform.rs
src/snapshots/: cnat__tests__it_leaves_alone_files_without_classes_to_prefix@leave_unstyled__fixtures__unstyled.tsx.snap  cnat__tests__it_preserves_comments@preserves_comments__fixtures__sample_comments.jsx.snap  cnat__tests__it_works_with_classes_or_classname_object_entries@object_outside__fixtures__nested__nested__sample.tsx.snap  cnat__tests__it_works_with_classes_or_classname_object_entries@object_outside__fixtures__nested__sample.tsx.snap  cnat__tests__it_works_with_classes_or_classname_object_entries@object_outside__fixtures__nested__sample2.tsx.snap  cnat__tests__it_works_with_classes_or_classname_object_entries@object_outside__fixtures__sample.tsx.snap  cnat__tests__it_works_with_classes_or_classname_object_entries@object_outside__fixtures__sample2.tsx.snap  cnat__tests__it_works_with_custom_jsx_attribute@object_inside__fixtures__nested__nested__sample.tsx.snap  cnat__tests__it_works_with_custom_jsx_attribute@object_inside__fixtures__nested__sample.tsx.snap  cnat__tests__it_works_with_custom_jsx_attribute@object_inside__fixtures__nested__sample2.tsx.snap  cnat__tests__it_works_with_custom_jsx_attribute@object_inside__fixtures__sample2.tsx.snap  cnat__tests__it_works_with_cva_fn_scope@cva__fixtures__nested__sample.tsx.snap  cnat__tests__it_works_with_cva_fn_scope@cva__fixtures__sample.tsx.snap  cnat__tests__it_works_with_cva_fn_scope@cva__fixtures__sample2.tsx.snap  fcn__tests__it_works-2.snap  fcn__tests__it_works-3.snap  (+29 more)
