[package]
name = "cnat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
swc_atoms = "0.6.5"
swc_common = { version = "0.33.19", features = ["tty-emitter"] }
swc_css = "0.157.38"
swc_ecma_ast = "0.112.5"
swc_ecma_codegen = "0.148.10"
swc_ecma_parser = "0.143.8"
swc_ecma_visit = "0.98.6"

[dev-dependencies]
assert_cmd = "2.0.14"
insta = { version = "1.36.1", features = ["serde"] }
