[package]
name = "cnat"
version = "0.0.4"
description = "Systematically apply certain modifications to classes, class names, used in your frontend codebase."
edition = "2021"
homepage = "https://github.com/Gnarus-G/cnat"
repository = "https://github.com/Gnarus-G/cnat"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
clap_complete = "4.5.1"
colored = "2.1.0"
ignore = "0.4.22"
swc_common = { version = "0.33.19", features = ["tty-emitter"] }
swc_css = "0.157.38"
swc_ecma_ast = "0.112.5"
swc_ecma_parser = "0.143.8"
swc_ecma_visit = "0.98.6"

[dev-dependencies]
assert_cmd = "2.0.14"
insta = { version = "1.36.1", features = ["serde"] }
